# JZ-F407VET6_Zephyr_Zenoh

./: .gitignore  README.md
.west/: config
app_jz407/: west.yml
app_jz407/boards/arm/JZ_F407VET6/: JZ_F407VET6.dts  JZ_F407VET6.yaml  JZ_F407VET6_defconfig  Kconfig.JZ_F407VET6  Kconfig.board  Kconfig.defconfig  board.cmake  board.yml
app_jz407/publisher/: CMakeLists.txt  listener.py  prj.conf
app_jz407/publisher/src/: main.c
